@@ -6,6 +6,6 @@ includedir=${prefix}/include/mono-@API_VER@
 Name: Mono
 Description: Mono Runtime
 Version: @VERSION@
-Requires: glib-2.0 gmodule-2.0 gthread-2.0
-Libs: -L${libdir} -lmono @libmono_ldflags@ -lm
+Requires: glib-2.0 gthread-2.0
+Libs: -L${libdir} @export_ldflags@ -lmono @libmono_ldflags@ -lm
 Cflags: -I${includedir} @libmono_cflags@
